--- a/index.ipynb
+++ b/index.ipynb
@@ -564,12 +564,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Bart Flanders'"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "name = \"Bart Simpson\"\n",
-    "name = name.replace(\"Simpson\",\"Flanders\")"
+    "name = name.replace(\"Simpson\",\"Flanders\")\n",
+    "name"
    ]
   },
   {
